goto4/assets/calendarapp-m2.yml
apiVersion: v1
kind: Service
metadata:
  name: calendarapp
  labels:
    app: calendarapp
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: calendarapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calendarapp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: calendarapp
        version: v1
    spec:
      containers:
        - name: calendarapp
          image: rmohammad/calendarapp:4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
