goto4/assets/calendarservice_v1.yml
apiVersion: v1
kind: Service
metadata:
  name: calendarservice-v1
  namespace: testspace
spec:
  ports:
    - name: tcp
      nodePort: 31009
      port: 9001
      targetPort: 9001
      protocol: TCP
  type: NodePort
  selector:
    app: calendarservice-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendarservice-v1
  namespace: testspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendarservice-v1
  template:
    metadata:
      annotations:
      labels:
        app: calendarservice-v1
    spec:
      containers:
        - env:
            - name: GRPC_PORT
              value: "9001"
          image: rmohammad/calendarservice:4
          name: calendarservice-v1
          ports:
            - containerPort: 9001
              name: grpc
          resources:
            requests:
              cpu: 100m
