goto4/assets/virtual-service-calendarservice-m-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calendarservice-m
  namespace: testspace
spec:
  hosts:
    - calendarservice-m
  http:
  - match:
    - headers:
        end-user:
          exact: beta-user
    route:
    - destination:
        host: calendarservice-m
        subset: v2
  - route:
    - destination:
        host: calendarservice-m
        subset: v1
